--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,8 @@ name: Ruby
 
 on:
   push:
-    branches: [ "main", "feature/add_deploy_workflows" ]
+    branches:
+      - main
 
 jobs:
   deploy:
