--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,10 @@ on:
   push:
     branches:
       - main
+      - feature/fix-ci
+
+env:
+  VERSION_ID: ${{ github.sha }}
 
 jobs:
   deploy:
@@ -24,9 +28,9 @@ jobs:
 
     - name: Deploy Lambda
       env:
-        access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        region: ${{ secrets.AWS_REGION }}
+        ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        REGION: ${{ secrets.AWS_REGION }}
       run: |
         gem install aws-sdk-lambda
         ruby ./deploy/deploy_lambda.rb
