--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,11 +24,17 @@ jobs:
       run: |
         zip -r costNotifierRuby lambda_function.rb vendor
 
+    - name: Configure AWS Credentials
+      if: github.ref == 'refs/heads/main'
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        role-to-assume: ${{ secrets.ROLE_ARN }}
+        role-session-name: RubyCostNotifier
+        aws-region: ${{ secrets.AWS_REGION }}
+
     - name: Deploy Lambda
       if: github.ref == 'refs/heads/main'
       env:
-        ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         REGION: ${{ secrets.AWS_REGION }}
       run: |
         gem install aws-sdk-lambda
