:sparkles: workflow 結果の通知を Slack App の GitHub で行うようにした
https://github.com/integrations/slack#actions-workflow-notifications

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,6 +2,9 @@ name: Deploy Lambda
 
 on:
   push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 permissions:
   id-token: write
@@ -43,24 +46,3 @@ jobs:
       run: |
         gem install aws-sdk-lambda
         ruby ./deploy/deploy_lambda.rb
-
-    - name: Send Result to Slack
-      id: slack
-      uses: slackapi/slack-github-action@v1.18.0
-      env:
-        SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-        SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
-      with:
-        payload: |
-          {
-            "text": "GitHub Action build result: ${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}",
-            "blocks": [
-              {
-                "type": "section",
-                "text": {
-                  "type": "mrkdwn",
-                  "text": "GitHub Action build result: ${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}"
-                }
-              }
-            ]
-          }
