:sparkles: 「AWS Lambda 関数での Parameter Store パラメーターの使用」を Ruby で試してみた

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,8 @@ jobs:
     - name: compress zip
       if: github.ref == 'refs/heads/main'
       run: |
-        zip -r costNotifierRuby lambda_function.rb vendor
+        zip -r functions lambda_function.rb
+        zip -r layer vendor
 
     - name: Configure AWS Credentials
       if: github.ref == 'refs/heads/main'
